Cars counter is added

--- a/Server/app/lib/camera_config/config.json
+++ b/Server/app/lib/camera_config/config.json
@@ -38,6 +38,7 @@
     }
   },
   "requester": {
-    "url": "http://liko-t4p.rhcloud.com/rest/v2/camera/log"
+    "urlForPlate": "http://liko-t4p.rhcloud.com/rest/v2/camera/log",
+    "urlForCounter": "http://liko-t4p.rhcloud.com/rest/v2/camera/counter"
   }
 }
